# zookeeper-registrar

./: .dockerignore  Cargo.toml  README.md  build-docker-image
docker/x86_64-unknown-linux-musl/: Dockerfile
etc/: app.json
src/: config.rs  main.rs  zk_config.rs  zk_node.rs
