[package]
name = "zookeeper-registrar"
version = "0.2.0"
authors = ["Bob Browning <bob.browning@pressassociation.com>"]

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
docopt = "0.8.3"
log = "0.4.1"
env_logger = "0.5.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }
zookeeper = "0.4.0"

[profile.release]
lto = true
panic = "abort"
